--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,4 +37,4 @@ dependencies = [
     "websockets==12.0"
 ]
 [tool.setuptools.packages.find]
-include = ["WhisperLive"]
+include = ["WhisperLive", "WhisperLive.*"]
